jstests/aggregation/testbugs.js
@@ -1,3 +1,5 @@
 // test all the bug test cases
 load('server3832.js');
 load('server4508.js');
+//load('server4638.js');
+load('server4738.js');
